@@ -69,7 +69,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="IdeaSandbox\AbstractFactoryForVehicles.linq" />
     <None Include="IdeaSandbox\DynamicGeneric.linq" />
+    <None Include="IdeaSandbox\DynamicGenericSimplified.linq" />
+    <None Include="IdeaSandbox\CollectionWithGeneric.linq" />
+    <None Include="IdeaSandbox\FactoryForTypeConverter.linq" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
